// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`func_inside_attr.js 1`] = `
====================================options=====================================
parsers: ["flow", "babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<bar x={function (x): Array<string> {}} />

=====================================output=====================================
<bar x={function(x): Array<string> {}} />;

================================================================================
`;

exports[`func_inside_attr.js 2`] = `
====================================options=====================================
jsxBracketSpacing: true
parsers: ["flow", "babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<bar x={function (x): Array<string> {}} />

=====================================output=====================================
<bar x={ function(x): Array<string> {} } />;

================================================================================
`;

exports[`return_type.js 1`] = `
====================================options=====================================
parsers: ["flow", "babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const fail = (): X => <x />;

=====================================output=====================================
const fail = (): X => <x />;

================================================================================
`;

exports[`return_type.js 2`] = `
====================================options=====================================
jsxBracketSpacing: true
parsers: ["flow", "babylon"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const fail = (): X => <x />;

=====================================output=====================================
const fail = (): X => <x />;

================================================================================
`;
